"Open the current translated file". It was corrected to "Open the current source file"

  - The HTML filter had a different behaviour, where attributes were transformed into 
tags and could not be translated.

  - Multi-line notes in XLIFF files were not extracted correctly

  - Issues with LaTeX filter with Java 8
  https://sourceforge.net/p/omegat/bugs/658/

  Localisation updates:

  - Dutch localisation updated to 3.1.5 (UI, readme, documentation, scripts)
  - Italian localisation updated to 3.1.5 (UI, readme)
  - Japanese localisation updated to 3.1.6 (UI)

----------------------------------------------------------------------
 OmegaT 3.1.5 (2014-08-13)
----------------------------------------------------------------------
   2 Enhancements
   4 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
3.1.5 vs. 3.1.4

  Implemented requests:

  - Load alternative translations from external TMXs created by OmegaT
  https://sourceforge.net/p/omegat/feature-requests/783/

  - List recent projects
  https://sourceforge.net/p/omegat/feature-requests/161/
  
  Bug fixes:

  - Pane headline missing using the Windows classic theme
  https://sourceforge.net/p/omegat/bugs/697/

  - Error while trying to validate tags with a changed order
  https://sourceforge.net/p/omegat/bugs/698/

  - Error: org.omegat.filters2.TranslationException: String index out of range: -1
  https://sourceforge.net/p/omegat/bugs/699/

  - OmegaT could fail to create nested subfolders in the target folder

----------------------------------------------------------------------
 OmegaT 3.1.4 (2014-07-28)
----------------------------------------------------------------------
  12 Enhancements
   2 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.4 vs. 3.1.3

  Implemented requests:

  - Enable Check whole project by default in check_rules.groovy 